1. Implemented the user alerts for “no internet, “no GPS” and “GPS spoofing”

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -128,6 +128,7 @@
     <string name="begin_txt">BEGIN</string>
     <string name="correct_answer_txt">Correct Answer</string>
     <string name="snap_photo">Snap a photo at</string>
+    <string name="did_u_knw_text">DID YOU KNOW?</string>
 
 
 
